--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,9 @@
-# Specifies intentionally untracked files to ignore when using Git
-# http://git-scm.com/docs/gitignore
-
-*~
-*.sw[mnpcod]
-.tmp
-*.tmp
-*.tmp.*
-*.sublime-project
-*.sublime-workspace
-.DS_Store
-Thumbs.db
-UserInterfaceState.xcuserstate
-$RECYCLE.BIN/
-
-*.log
-log.txt
-npm-debug.log*
-
-/.idea
-/.ionic
-/.sass-cache
-/.sourcemaps
-/.versions
-/.vscode
-/coverage
-/dist
+/.git
+/.gitignore
 /node_modules
-/platforms
-/plugins
-/www
+/package-lock.json
+/src
+/tsconfig.app.json
+/tsconfig.json
+/tsconfig.spec.json
+/tslint.json
